--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,14 +2,13 @@
 <nav class="navbar">
     <div class="container">
       <ul class="nav-links">
-        <li><a href="/hero" routerLinkActive="active">Inicio</a></li>
-        <li><a href="/featured-cities" routerLinkActive="active">Ciudades</a></li>
-        <li><a href="/services" routerLinkActive="active">Servicios</a></li>
-        <li><a href="/contact" routerLinkActive="active">Contacto</a></li>
+        <li><a href="#hero" routerLinkActive="active">Inicio</a></li> <!-- Redirige a HeroComponent -->
+        <li><a href="#featured-cities" routerLinkActive="active">Ciudades</a></li> <!-- Redirige a FeaturedCitiesComponent -->
+        <li><a href="#services" routerLinkActive="active">Servicios</a></li> <!-- Redirige a ServicesComponent -->
+        <li><a href="#contact" routerLinkActive="active">Contacto</a></li> <!-- Redirige a ContactComponent -->
       </ul>
     </div>
   </nav>
-  
   
 
   
