--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-
 <app-navbar></app-navbar>
-<app-hero></app-hero>
-<app-featured-cities></app-featured-cities>
-<app-services></app-services>
-
-<app-footer></app-footer>
-
+<router-outlet></router-outlet> <!-- Aquí se cargarán los componentes según la ruta -->
+<!-- Eliminar la instancia de app-hero para evitar duplicación -->
+<!-- <div id="hero"><app-hero></app-hero></div> -->
+<div id="featured-cities"><app-featured-cities></app-featured-cities></div>
+<div id="services"><app-services></app-services></div>
+<div id="contact"><app-contact></app-contact></div> <!-- Asegúrate de que el componente Contact esté aquí -->
+<app-footer></app-footer> <!-- Footer siempre visible -->
 
