--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,47 @@
-<p>contact works!</p>
+<div class="contact-container">
+    <h1>Contacta con nosotros</h1>
+  
+    <div class="contact-item">
+      <img src="https://cdn-icons-png.flaticon.com/128/4494/4494494.png" alt="WhatsApp Icon" class="icon" />
+      <a href="https://wa.me/34685905896" target="_blank">+34 685 905 896 via WhatsApp</a>
+    </div>
+  
+  
+    <div class="contact-item">
+      <img src="https://cdn-icons-png.flaticon.com/128/270/270021.png" alt="Gmail Icon" class="icon" />
+      <a href="mailto:javialarcon29&#64;gmail.com">javialarcon29&#64;gmail.com por correo</a>
+    </div>
+  
+    <div class="contact-item">
+      <img src="https://cdn-icons-png.flaticon.com/128/145/145807.png" alt="LinkedIn Icon" class="icon" />
+      <a href="https://www.linkedin.com/in/francisco-javier-alarc%C3%B3n-jim%C3%A9nez-939047217/" target="_blank">
+        LinkedIn: Francisco Javier Alarcón
+      </a>
+    </div>
+  
+    <!-- Chatbot integrado -->
+    <div class="chat-bot-container">
+      <h2>Preguntas frecuentes
+        
+      </h2>
+      <div class="chat-box">
+        <div *ngFor="let message of messages">
+          <div class="message" [ngClass]="{'user-message': message.user === 'User', 'bot-message': message.user === 'Bot'}">
+            <strong>{{ message.user }}:</strong> {{ message.text }}
+          </div>
+        </div>
+      </div>
+      <input [(ngModel)]="userMessage" placeholder="Escribe un mensaje..." />
+      <button (click)="sendMessage()">Enviar</button>
+  
+      <!-- Botones para preguntas comunes -->
+      <div class="common-questions">
+        <h3>Preguntas comunes:</h3>
+        <button *ngFor="let question of commonQuestions" (click)="sendCommonQuestion(question)">
+          {{ question }}
+        </button>
+      </div>
+    </div>
+  </div>
+  
+  
